# cad-prototype

./: README.md  package.json  svelte.config.js
.github/workflows/: ci.yml  server.yml  ui.yml
server/: .dockerignore  .gitignore  README.md  docs.sh  pyproject.toml  requirements.txt
server/server/: main.py
server/server/measure/: process.py
server/server/path/: cq_profile.py  utils.py
src-tauri/: tauri.conf.json
src/routes/: +page.svelte  GridLine.svelte
ui/: .gitignore  package.json  svelte.config.js
ui/src/: app.d.ts
ui/src/lib/constants/: backend.ts
ui/src/routes/: +page.svelte  Download3d.svelte  GridLine.svelte  Header.svelte  UploadImg.svelte  UploadPdf.svelte
